# Process this file with autoconf to produce a configure script.
AC_INIT([TArray.cpp])
AM_INIT_AUTOMAKE(libfivel-common, 0.0)

#AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_RANLIB
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

# Checks for library functions.
AC_CHECK_FUNCS([strstr])

# Output our results.
AC_OUTPUT([Makefile])
