# Process this file with autoconf to produce a configure script.
AC_INIT([TArray.cpp])
AM_INIT_AUTOMAKE(libfivel-common, 0.0)

# Turn on debugging.
CFLAGS="$CFLAGS -g"
CXXFLAGS="$CXXFLAGS -g"

# Set up some compiler options for Unix.
AC_DEFINE(TEST_TYPOGRAPHY)
AC_DEFINE(HAVE_EYE_OF_GNOME)

# Figure out how to link against FreeType 2.
CFLAGS="$CFLAGS `freetype-config --cflags`"
CXXFLAGS="$CXXFLAGS `freetype-config --cflags`"
FREETYPE_LDADD="`freetype-config --libs`"
AC_SUBST(FREETYPE_LDADD)

# Checks for programs.
AC_PROG_RANLIB
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

# Checks for library functions.
AC_CHECK_FUNCS([strstr])

# Output our results.
AC_OUTPUT([Makefile fonttools/Makefile])
