SUBDIRS = crypto


#==========================================================================
#  MzScheme Compilation
#==========================================================================
#  MzScheme has a non-standard build procedure, so we need to do this stuff
#  manually.
#
#  TODO - For now, *very* manually... I'm disabling this.

#all-recursive:
#	(cd plt/src; $(MAKE) all)

#clean-recursive:
#	(cd plt/src; $(MAKE) clean)
#	(cd plt/bin; rm -f *)
